# ESP32

./: .gitignore  README.md
BLE-sender/: README.md  sdkconfig
BLE-sender/main/: CMakeLists.txt  config.h  main.c
getter/: README.md
getter/main/: config.h  main.c
http/: Makefile  README.md
http-receiver/: README.md
http-receiver/main/: CMakeLists.txt  main.c
http-receiver/main/core/: lib.c  struct-device.h
http-receiver/main/core/ESP32/: ESP32-headers.h  basics.c  basics.h
http-receiver/main/core/ESP32/output/relay/: relay.c  relay.h
http-receiver/main/core/ESP32/peripherals/i2c/: i2c.c  i2c.h
http-receiver/main/core/ESP32/peripherals/spi/: spi.h
http-receiver/main/core/ESP32/protocols/http/: http.h
http-receiver/main/core/json/: decoder-i2t-json.c  struct-json.h
http-sender/: CMakeLists.txt  README.md
http-sender/main/: CMakeLists.txt  app_main.c  config.h  main.c
http-sender/main/core/: lib.c  lib.h
http-sender/main/core/ESP32/peripherals/gpio/: gpio.c
http-sender/main/core/ESP32/peripherals/i2c/: i2c_old.c  i2c_salvado.c
http-sender/main/core/ESP32/peripherals/spi/: spi.c
http-sender/main/core/ESP32/protocols/http/: http.c  http.h
http-sender/main/core/ESP32/sensors/acoustic/: acoustic.c
http-sender/main/core/ESP32/sensors/bh1750/: bh1750.h
http-sender/main/core/ESP32/sensors/bme280/: bme280.c  bme280.h
http-sender/main/core/ESP32/sensors/internal/: internal.c  internal.h
http-sender/main/core/ESP32/sensors/mpu6050/: mpu6050.c  mpu6050.h
http/main/: CMakeLists.txt  app_main.c  config.h  main.c  main.h
http/main/core/: config.h  lib.c  lib.h  main.c  struct-device.h
http/main/core/ESP32/: ESP32-headers.h  basics.c  basics.h
http/main/core/ESP32/bh1750/: bh1750.h
http/main/core/ESP32/gpio/: gpio.c
http/main/core/ESP32/http-socket/: http-socket.c  http-socket.h
http/main/core/ESP32/peripherals/gpio/: gpio.h
http/main/core/ESP32/peripherals/i2c/: i2c.c
http/main/core/ESP32/protocols/http/: http.c  http.h
http/main/core/ESP32/sensors/acoustic/: acoustic.c
http/main/core/ESP32/sensors/bh1750/: bh1750.c  bh1750.h
http/main/core/ESP32/sensors/bme280/: bme280.c  bme280.h
http/main/core/ESP32/sensors/internal/: internal.c
http/main/core/ESP32/sensors/mpu6050/: mpu6050.c  mpu6050.h
http/main/core/ESP32/tIntern/: tIntern.c  tIntern.h
http/main/core/ESP32/wifi/: wifi.c  wifi.h
mqtt-sender/: README.md
mqtt-sender/main/: CMakeLists.txt  (+1 more)
(+29 files in other folders)
